focus fix on mobile

--- a/style.css
+++ b/style.css
@@ -96,13 +96,15 @@ body {
   transition: all 0.3s ease;
 
   /* fix default focus on mobile browsers */
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    -webkit-appearance: none;
+    -webkit-tap-highlight-color: transparent; /* Safari/Chrome on iOS and Android */
+    tap-highlight-color: transparent; /* General */
+}
+
+.answer-btn:focus,
+.answer-btn:active {
     outline: none;
-    -webkit-user-select: none;
-    user-select: none;
-    position: relative;
-    z-index: 1;
+    background-color: inherit;
+    box-shadow: none;
 }
 
 .answer-btn:hover {
